apps/mealie/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v3.27.0@sha256:ba24b88462380fb59a6c7d04c6d9e607e0b6b04e31306592181186bcdab1952b
          ports:
            - containerPort: 9000
              name: http
              protocol: TCP
          volumeMounts:
            - name: mealie-data
              mountPath: /app/data
          readinessProbe:
            httpGet:
              path: /api/app/about
              port: http
          livenessProbe:
            httpGet:
              path: /api/app/about
              port: http
          resources:
            requests:
              memory: 500Mi
              cpu: 10m
            limits:
              memory: 500Mi
              cpu: 500m
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
      volumes:
        - name: mealie-data
          persistentVolumeClaim:
            claimName: mealie-pvc
