apps/mealie/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
  labels:
    app: mealie
spec:
  selector:
    app: mealie
  ports:
    - port: 9000
      protocol: TCP
      targetPort: 9000
      name: http
  type: ClusterIP
