apps/mealie/manifests/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mealie
  namespace: mealie
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - mealie.mgmt.sholdee.net
  rules:
    - backendRefs:
        - name: mealie
          namespace: mealie
          port: 9000
